--- a/public/assets/user/css/style.css
+++ b/public/assets/user/css/style.css
@@ -1,8 +1,8 @@
 .jam {
     overflow: hidden;
-    width: 340px;
+    max-width: 340px;
     margin: 30px auto;
-    box-shadow: 0px 0px 3px black;
+    box-shadow: 0px 0px 3px rgb(126, 126, 126);
 }
 .kotak {
     float: left;
@@ -18,8 +18,8 @@
 
 .row {
     position: relative;
-    left: 90px;
-    margin: 30px 0;
+    left: 110px;
+    bottom: 0px;
 }
 
 .col-4 {
